--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "engine": [ "node >= 0.10.11" ],
   "scripts": {
-    "start": "node lib/server.js"
+    "start": "node lib/server.js",
+    "test": "mocha-phantomjs index.html"
   }
 }
