--- a/conf/xdomain.socialal.ly.conf
+++ b/conf/xdomain.socialal.ly.conf
@@ -2,9 +2,11 @@ server {
   listen 80;
   server_name xdomain.socialal.ly;
   location / {
-    proxy_http_version 1.1;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $http_host;
-    proxy_pass http://127.0.0.1:9080;
+    proxy_http_version  1.1;
+    proxy_redirect      off;
+    proxy_set_header    Host $http_host;
+    proxy_set_header    X-Real-IP       $remote_addr;
+    proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_pass          http://127.0.0.1:9080;
   }
 }
