--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git://github.com/socialally/ajax.git"
   },
   "dependencies": {
-    "strike": ">= 0.1.72",
+    "strike": "== 0.1.73",
     "sassy": ">= 0.0.29",
     "requirejs": ">= 2.1.3",
     "bunyan": ">= 0.21.1",
