--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "url": "git://github.com/socialally/sa-ajax.git"
   },
   "dependencies": {
-    "strike": "== 0.1.73",
-    "sassy": ">= 0.0.29",
-    "requirejs": ">= 2.1.3",
-    "bunyan": ">= 0.21.1",
-    "nconf": ">= 0.6.7",
-    "express": ">= 3.2.6"
+    "strike": "~0.1.73",
+    "sassy": "~0.0.29",
+    "requirejs": "~2.1.3",
+    "bunyan": "~0.21.1",
+    "nconf": "~0.6.7",
+    "express": "~3.2.6"
   },
   "devDependencies": {
-    "mocha": ">= 1.9.0",
-    "chai": ">= 1.6.0",
-    "mocha-phantomjs": ">= 3.1.4"
+    "mocha": "~1.9.0",
+    "chai": "~1.6.0",
+    "mocha-phantomjs": "~3.1.4"
   },
   "engine": [ "node >= 0.10.11" ],
   "scripts": {
