--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "type": "git",
     "url": "git://github.com/socialally/sa-ajax.git"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "strike": "== 0.1.73",
     "sassy": ">= 0.0.29",
     "requirejs": ">= 2.1.3",
     "bunyan": ">= 0.21.1",
     "nconf": ">= 0.6.7",
-    "express": ">= 3.2.6"
-  },
-  "devDependencies": {
+    "express": ">= 3.2.6",
     "mocha": ">= 1.9.0",
     "chai": ">= 1.6.0",
     "mocha-phantomjs": ">= 3.1.4"
