--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sa-ajax",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Cross-browser ajax implementation",
   "author": "muji <noop@xpm.io>",
   "publishConfig": {
@@ -23,7 +23,9 @@
     "chai": ">= 1.6.0",
     "mocha-phantomjs": ">= 3.1.4"
   },
-  "engine": [ "node >= 0.10.11" ],
+  "engine": [
+    "node >= 0.10.11"
+  ],
   "scripts": {
     "start": "node lib/server.js",
     "test": "mocha-phantomjs http://localhost:9080",
