--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "dependencies": {},
   "devDependencies": {
     "strike": "== 0.1.73",
-    "sassy": ">= 0.0.29",
-    "requirejs": ">= 2.1.3",
-    "bunyan": ">= 0.21.1",
-    "nconf": ">= 0.6.7",
-    "express": ">= 3.2.6",
-    "mocha": ">= 1.9.0",
-    "chai": ">= 1.6.0",
-    "mocha-phantomjs": ">= 3.1.4"
+    "sassy": "~0.0.29",
+    "requirejs": "~2.1.3",
+    "bunyan": "~0.21.1",
+    "nconf": "~0.6.7",
+    "express": "~3.2.6",
+    "mocha": "~1.9.0",
+    "chai": "~1.6.0",
+    "mocha-phantomjs": "~3.1.4"
   },
   "engine": [
     "node >= 0.10.11"
