--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "requirejs": "~2.1.3",
-    "bunyan": "~0.21.1",
-    "nconf": "~0.6.7",
+    "chai": "~1.6.0",
+    "cli-logger": "^0.5.12",
     "express": "~3.2.6",
     "mocha": "~1.9.0",
-    "chai": "~1.6.0",
-    "mocha-phantomjs": "~3.1.4"
+    "mocha-phantomjs": "~3.1.4",
+    "nconf": "~0.6.7",
+    "requirejs": "~2.1.3"
   },
   "engine": [
     "node >= 0.10.11"
