Move test files.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "node >= 0.10.11"
   ],
   "scripts": {
-    "start": "node lib/server.js",
-    "test": "mocha-phantomjs http://localhost:9080",
+    "start": "node server.js",
+    "test": "mocha-phantomjs http://localhost:9080/test/",
     "minify": "r.js -o build.js"
   }
 }
