--- a/.npmignore
+++ b/.npmignore
@@ -1,18 +1,11 @@
-conf
-css
-doc
-js/ajax-xml.js
-js/require.js
-js/runner.js
-js/lib
-js/specs
-js/util
-/lib/server.js
+coverage
 target
-/bake
-/build.js
-/index.html
-/semver.json
-/standalone.html
-/tasks
-/version
+package
+build
+conf
+doc
+test
+*.log
+*.pid
+*.bak
+*.tgz
