Refactor tests, use browserify.
Work on fixing global leak issue, the only remaining problem to restore
test specs.

--- a/package.json
+++ b/package.json
@@ -3,27 +3,44 @@
   "version": "0.4.0",
   "description": "Cross-browser and cross-domain ajax implementation",
   "author": "muji <noop@xpm.io>",
-  "main": "js/ajax.js",
+  "main": "lib/ajax.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/socialally/xdr.git"
   },
   "devDependencies": {
+    "browser-sync": "~2.8.2",
+    "browserify": "~11.0.1",
     "chai": "~3.2.0",
-    "cli-logger": "~0.5.40",
-    "express": "~3.2.6",
+    "del": "~1.2.0",
+    "express": "~3.4.0",
+    "gulp": "~3.9.0",
+    "gulp-eslint": "~1.0.0",
+    "gulp-istanbul-report": "0.0.1",
+    "gulp-mocha-phantomjs": "~0.8.1",
+    "gulp-size": "~1.2.1",
+    "gulp-sourcemaps": "~1.5.2",
+    "gulp-uglify": "~1.2.0",
+    "gulp-util": "~3.0.4",
+    "istanbul": "~0.3.6",
+    "merge": "~1.2.0",
     "mocha": "~2.2.5",
-    "mocha-phantomjs": "~3.6.0",
-    "nconf": "~0.6.7",
-    "phantomjs": "~1.9.15",
-    "requirejs": "~2.1.20"
+    "mocha-phantomjs-istanbul": "~0.0.2",
+    "require-dir": "~0.3.0",
+    "run-sequence": "~1.1.2",
+    "vinyl-buffer": "~1.0.0",
+    "vinyl-source-stream": "~1.1.0"
   },
   "scripts": {
-    "clean": "rm -f ajax.min.js",
     "docs": "npm run readme",
     "readme": "mdp --force -v",
-    "test": "mocha-phantomjs http://localhost:9080/test/",
-    "minify": "r.js -o build.js"
+    "start": "node server.js",
+    "lint": "gulp lint",
+    "clean": "gulp clean",
+    "spec": "gulp spec",
+    "instrument": "istanbul instrument --output instrument lib/",
+    "cover": "npm run instrument && gulp cover",
+    "test": "gulp test"
   },
   "mdp": {
     "title": "Cross Domain Ajax",
