Add stability flag.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "xdr",
-  "version": "0.4.2",
   "description": "Cross-browser and cross-domain ajax implementation",
+  "version": "0.4.2",
+  "stability": "unstable",
   "author": "muji <noop@xpm.io>",
   "main": "lib/ajax.js",
   "repository": {
@@ -55,6 +56,10 @@
     "toc": "Table of Contents",
     "base": "https://github.com/socialally/xdr",
     "partial": [
+      {
+        "ref": "stability",
+        "format": "> `Stability: %s`"
+      },
       {
         "inc": [
           "introduction.md",
